# physics-engine

./: CMakeLists.txt  README.md
.clangd/index/: _fixes.hpp.5BC9322CC158D67E.idx  _vectorize.hpp.1F61062517254A6C.idx  app.hpp.73AE6FE30BC03F8B.idx  apputils.hpp.33531E22E47D1EE9.idx  ballistic.hpp.C73063211A8ED894.idx  ballisticdemo.cpp.DCB7EE26675AA904.idx  camera.hpp.454E1BEA03988A64.idx  common.hpp.C17AEDBAD37AEDA7.idx  compute_common.hpp.4EF8B8D2BB9F37B6.idx  compute_vector_relational.hpp.0197E84F49BFF1D6.idx  constants.hpp.6C7466907DEA0355.idx  constants.inl.A3C1ADBFF24AEB97.idx  core.h.B71DB5B21EB946C2.idx  debug.hpp.C906A1A88401C9C1.idx  debug.hpp.F570682C6AC64985.idx  demowindow.cpp.7FDCCB7731AEB729.idx  epsilon.hpp.7E7DD8E6E472F1B0.idx  epsilon.inl.C58A764939C70FD9.idx  exponential.hpp.1E40FF29DF117FF0.idx  external.hpp.2D188C3A47F567BC.idx  func_common.inl.EFAC4EECD1A660AC.idx  func_exponential.inl.73D5C85085808401.idx  func_geometric.inl.79AB75245D490544.idx  func_integer.inl.D515BA8B58FF7341.idx  func_matrix.inl.5226020CD08A327F.idx  func_packing.inl.886D3250EC45B1D8.idx  func_trigonometric.inl.E76712308DA6BB87.idx  func_vector_relational.inl.6773506C59136C1A.idx  fwd.hpp.3F38E19D5F3F676B.idx  geometric.hpp.27E2A58D3AB37845.idx  glad.c.63487DD2E1B07EB9.idx  glad.h.A8C000788EB12BE3.idx  glm.hpp.48A436E467C09FC3.idx  integer.hpp.A2C77DE27D7AC090.idx  light.hpp.34EE54F4D3834A1F.idx  main.cpp.72E7E24AA8596D97.idx  massapp.hpp.9EF1CED9FAE65B01.idx  mat2x2.hpp.92AEF1E2A9B2BC23.idx  mat2x3.hpp.B49233943619DB0D.idx  mat2x4.hpp.980595EB946E99F7.idx  (+174 more)
include/: external.hpp
include/demos/: app.hpp  apputils.hpp  ballistic.hpp  camera.hpp  debug.hpp  game.hpp  game2.hpp  gameballistic.hpp  gameloop.hpp  gamemanager.hpp  gameobj.hpp  glutapp.hpp  light.hpp  massapp.hpp  mengine.hpp  mesh.hpp  meshapp.hpp  meshutils.hpp  oldmesh.hpp  platformapp.hpp  rendershape.hpp  shader.hpp  texture.hpp  timeutils.hpp  transformable.hpp  vertex.hpp  vmaker.hpp
include/vivaphysics/: core.h  debug.hpp  eulerangle.hpp  onb.hpp  particle.hpp  pcontact.hpp  pfgen.hpp  pfgenenum.hpp  plink.hpp  plinkenum.hpp  precision.hpp  pworld.hpp  quaternion.hpp  vec3.hpp
src/: main.cpp
src/demos/: ballisticdemo.cpp  demoballistic.cpp  demowindow.cpp  demowindow2.cpp  demowindow3.cpp  meshdemowindow.cpp  newapp.cpp  platform.cpp
